--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -16,30 +16,38 @@ endif
 
 INC       := -Iinclude -I$(CUDA_PATH)/include
 
-SRC_CPP   := src/proxy.cpp
-SRC_CU    := src/benchmark.cu src/gpu_kernel.cu src/ring_buffer.cu
+SRC_CPP   := src/proxy.cpp src/rdma.cpp
+SRC_CU_LOCAL := src/benchmark_local.cu src/gpu_kernel.cu src/ring_buffer.cu
+SRC_CU_REMOTE := src/benchmark_remote.cu src/gpu_kernel.cu src/ring_buffer.cu
 
 OBJ_CPP   := $(SRC_CPP:.cpp=.o)
-OBJ_CU    := $(SRC_CU:.cu=.o)
-OBJ       := $(OBJ_CPP) $(OBJ_CU)
+OBJ_CU_LOCAL := $(SRC_CU_LOCAL:.cu=.o)
+OBJ_CU_REMOTE := $(SRC_CU_REMOTE:.cu=.o)
 
-TARGET    := benchmark
+OBJ_LOCAL := $(OBJ_CPP) $(OBJ_CU_LOCAL)
+OBJ_REMOTE := $(OBJ_CPP) $(OBJ_CU_REMOTE)
 
-all: $(TARGET)
+TARGET_LOCAL  := benchmark_local
+TARGET_REMOTE := benchmark_remote
 
-# C++ file compilation
+all: $(TARGET_LOCAL) $(TARGET_REMOTE)
+
+# Compile C++ sources
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) $(INC) -c $< -o $@ -Wno-deprecated-gpu-targets
 
-# CUDA file compilation
+# Compile CUDA sources
 %.o: %.cu
-	$(NVCC) -gencode arch=compute_90,code=sm_90 $(NVCCFLAGS) $(INC) -c $< -o $@ -Wno-deprecated-gpu-targets
+	$(NVCC) -arch=sm_90 $(NVCCFLAGS) $(INC) -c $< -o $@ -Wno-deprecated-gpu-targets
 
 # Linking
-$(TARGET): $(OBJ)
-	$(NVCC) -gencode arch=compute_90,code=sm_90 $(NVCCFLAGS) $(INC) $(OBJ) -lcuda -lcudart $(LDFLAGS) -o $@  -Wno-deprecated-gpu-targets
+$(TARGET_LOCAL): $(OBJ_LOCAL)
+	$(NVCC) -arch=sm_90 $(NVCCFLAGS) $(INC) $(OBJ_LOCAL) -lcuda -lcudart $(LDFLAGS) -o $@  -Wno-deprecated-gpu-targets
+
+$(TARGET_REMOTE): $(OBJ_REMOTE)
+	$(NVCC) -arch=sm_90 $(NVCCFLAGS) $(INC) $(OBJ_REMOTE) -lcuda -lcudart $(LDFLAGS) -o $@  -Wno-deprecated-gpu-targets
 
 clean:
-	rm -f $(OBJ) $(TARGET)
+	rm -f $(OBJ_CPP) $(OBJ_CU_LOCAL) $(OBJ_CU_REMOTE) $(TARGET_LOCAL) $(TARGET_REMOTE)
 
 .PHONY: all clean
