--- a/rdma/Makefile_hip
+++ b/rdma/Makefile_hip
@@ -18,13 +18,14 @@ lib_src := $(filter-out %_plugin.cc,$(lib_src))
 lib_obj = $(lib_src:.cc=.o)
 
 test_src = $(wildcard *_test.cc)
+test_src := $(filter-out rdma_test.cc,$(test_src))
 test_bin = $(test_src:.cc=)
 
 .PHONY: build
 build: $(test_bin) $(lib_obj) $(PLUGIN_SO)
 
-rdma_test: rdma_test.cc $(DEPS) $(lib_obj)
-	g++ rdma_test.cc -o rdma_test $(lib_obj) $(INC) $(LIBS) $(CXXFLAGS)
+transport_test: transport_test.cc $(DEPS) $(lib_obj)
+	g++ transport_test.cc -o transport_test $(lib_obj) $(INC) $(LIBS) $(CXXFLAGS)
 
 %.o: %.cc $(DEPS)
 	g++ -c $< -o $@ $(INC) $(CXXFLAGS)
