--- a/afxdp/Makefile
+++ b/afxdp/Makefile
@@ -1,7 +1,8 @@
 ABS_ROOT_PATH := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
+ABS_REPO_ROOT := $(shell realpath $(ABS_ROOT_PATH)/..)
 
 KERNEL = $(shell uname -r)
-INC = -I ./lib/install/include
+INC = -I ./lib/install/include -I$(ABS_REPO_ROOT)/include
 LIBS = ./lib/install/lib/libxdp.a ./lib/install/lib/libbpf.a -lglog -lgflags -lgtest -lz -lelf
 LIBS_SHARED = -Wl,-rpath=$(ABS_ROOT_PATH)/./lib/xdp-tools/lib/libxdp/ \
 	   		  -Wl,-rpath=$(ABS_ROOT_PATH)/./lib/libbpf/src/ \
