--- a/efa/Makefile
+++ b/efa/Makefile
@@ -8,7 +8,7 @@ EFA_HOME:=/opt/amazon/efa
 INC = -I./ -I$(CUDA_HOME)/include -I${EFA_HOME}/include -I$(ABS_REPO_ROOT)/include
 LIBS = -L ${CUDA_HOME}/lib64 -L ${EFA_HOME}/lib -libverbs -lefa -lcudart -lcuda -lpthread -lglog -lgflags -lgtest -lz -lelf
 LIBS_SHARED = ${LIBS}
-override CXXFLAGS += -O3 -g -std=c++17 -Wno-pointer-arith -Wno-interference-size -fPIC
+override CXXFLAGS += -O3 -g -std=c++17 -Wno-pointer-arith -Wno-interference-size -fPIC -DUSE_EFA
 DEPS = *.h
 PLUGIN_SO = libnccl-net.so
 
