--- a/rdma/Makefile
+++ b/rdma/Makefile
@@ -4,7 +4,7 @@ NCCL_HOME:=../thirdparty/nccl
 CUDA_HOME:=/usr/local/cuda
 
 INC = -I./ -I$(CUDA_HOME)/include
-LIBS = -lglog -lgflags -lgtest -lz -lelf -libverbs  -L /usr/local/cuda/lib64 -lcudart
+LIBS = -lglog -lgflags -lgtest -lz -lelf -libverbs  -L /usr/local/cuda/lib64 -lcudart -lpthread
 LIBS_SHARED = -lglog -lgflags -lgtest -lz -lelf -libverbs
 override CXXFLAGS += -O3 -g -std=c++17 -Wno-pointer-arith -Wno-interference-size -fPIC
 DEPS = *.h
