add pcie_test to map GPU and nIC

--- a/rdma/Makefile
+++ b/rdma/Makefile
@@ -32,6 +32,9 @@ rdma_test: rdma_test.cc $(DEPS) $(lib_obj)
 transport_test: transport_test.cc $(DEPS) $(lib_obj)
 	g++ transport_test.cc -o transport_test $(lib_obj) $(INC) $(LIBS) $(CXXFLAGS)
 
+pcie_test: pcie_test.cc $(DEPS) $(lib_obj)
+	g++ pcie_test.cc -o pcie_test $(lib_obj) $(INC) $(LIBS) $(CXXFLAGS)
+
 %.o: %.cc $(DEPS)
 	g++ -c $< -o $@ $(INC) $(CXXFLAGS)
 
