--- a/rdma/Makefile
+++ b/rdma/Makefile
@@ -2,7 +2,7 @@ ABS_ROOT_PATH := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 ABS_REPO_ROOT := $(shell realpath $(ABS_ROOT_PATH)/..)
 
 NCCL_HOME:=../thirdparty/nccl
-CUDA_HOME:=/usr/local/cuda
+CUDA_HOME?=/usr/local/cuda
 
 INC = -I./ -I$(CUDA_HOME)/include -I$(ABS_REPO_ROOT)/include
 LIBS = -lglog -lgflags -lgtest -lz -lelf -libverbs  -L /usr/local/cuda/lib64 -lcudart -lpthread
