--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -12,12 +12,19 @@ RUN apt-get update && \
         rdma-core libibverbs-dev \
         libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
         libnuma-dev libdrm-dev libdrm-amdgpu1 \
-        python3-pip python3-setuptools python3-wheel python-is-python3 python3-venv && \
+        python3-dev python3-pip python3-setuptools python3-wheel \
+        python-is-python3 python3-venv python3-distutils \
+        pkg-config libhiredis-dev zlib1g-dev curl && \
     rm -rf /var/lib/apt/lists/*
 
 # Python build back-end
-RUN pip install --no-cache-dir build auditwheel
+RUN pip install --no-cache-dir build auditwheel pybind11
 
+RUN git clone --depth 1 https://github.com/sewenew/redis-plus-plus.git /tmp/redis-plus-plus && \
+    cd /tmp/redis-plus-plus && mkdir build && cd build && \
+    cmake .. && make -j && make install && \
+    rm -rf /tmp/redis-plus-plus
+    
 WORKDIR /io
 
 CMD ["bash"] 
