--- a/docker/Dockerfile.efa
+++ b/docker/Dockerfile.efa
@@ -12,8 +12,10 @@ RUN apt-get update && \
         rdma-core libibverbs-dev \
         libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
         libnuma-dev libdrm-dev libdrm-amdgpu1 \
-        python3-pip python3-setuptools python3-wheel python-is-python3 python3-venv && \
-    rm -rf /var/lib/apt/lists/*
+        pkg-config libhiredis-dev zlib1g-dev curl \
+        python3-dev python3-distutils python3-setuptools \
+        python3-wheel python3-venv python3-pip python-is-python3 && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -42,8 +44,13 @@ ENV LD_LIBRARY_PATH=/opt/amazon/efa/lib64:$LD_LIBRARY_PATH
 RUN fi_info -p efa || true
 
 # Python build back-end
-RUN pip install --no-cache-dir build auditwheel
+RUN pip install --no-cache-dir build auditwheel pybind11
 
+RUN git clone --depth 1 https://github.com/sewenew/redis-plus-plus.git /tmp/redis-plus-plus && \
+    cd /tmp/redis-plus-plus && mkdir build && cd build && \
+    cmake .. && make -j && make install && \
+    rm -rf /tmp/redis-plus-plus
+    
 WORKDIR /io
 
 CMD ["bash"] 
