--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "thirdparty/nccl-tests"]
 	path = thirdparty/nccl-tests
 	url = https://github.com/NVIDIA/nccl-tests.git
+[submodule "nccl-mt"]
+	path = nccl-mt
+	url = https://github.com/uccl-project/nccl.git
