--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -8,17 +8,35 @@ ENV DEBIAN_FRONTEND=noninteractive
 # ---------------------------------------------------------------------------
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+        software-properties-common \
         build-essential cmake git ninja-build g++ make patchelf \
         rdma-core libibverbs-dev \
         libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
         libnuma-dev libdrm-dev libdrm-amdgpu1 \
-        python3-dev python3-pip python3-setuptools python3-wheel \
-        python-is-python3 python3-venv python3-distutils \
         pkg-config libhiredis-dev zlib1g-dev curl && \
+\
+# ───── Add Python 3.13 PPA & install Python 3.13 + setuptools ─────
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends \
+        python3.13 python3.13-dev python3.13-venv python3-setuptools && \
+\
+# ───── Bootstrap pip for Python 3.13 ─────
+    curl -sS https://bootstrap.pypa.io/get-pip.py | python3.13 && \
+    ln -sf /usr/bin/pip3.13 /usr/local/bin/pip && \
+    ln -sf /usr/bin/python3.13 /usr/local/bin/python3.13 && \
+\
+# ───── Clean up apt cache ─────
     rm -rf /var/lib/apt/lists/*
 
-# Python build back-end
-RUN pip install --no-cache-dir build auditwheel pybind11
+# ─────────────────────────────────────────────────────────
+# Install Python build back-end (for Python 3.13)
+# ─────────────────────────────────────────────────────────
+RUN python3.13 -m pip install --no-cache-dir build auditwheel pybind11
+
+# ───── Set Python 3.13 as default python3 and python3-config ─────
+RUN ln -sf /usr/bin/python3.13 /usr/local/bin/python3 && \
+    ln -sf /usr/bin/python3.13-config /usr/local/bin/python3-config
 
 RUN git clone --depth 1 https://github.com/sewenew/redis-plus-plus.git /tmp/redis-plus-plus && \
     cd /tmp/redis-plus-plus && mkdir build && cd build && \
