--- a/gpu_driven/Makefile
+++ b/gpu_driven/Makefile
@@ -13,8 +13,8 @@ INCLUDES := -Iinclude -I$(CUDA_PATH)/include -I/usr/include
 
 SRC_CPP := src/proxy.cpp src/rdma.cpp src/common.cpp src/peer_copy_worker.cpp
 SRC_CU  := src/gpu_kernel.cu src/ring_buffer.cu src/peer_copy.cu
-SRC_LOCAL  := src/benchmark_local.cu
-SRC_REMOTE := src/benchmark_remote.cu
+SRC_LOCAL  := bench/benchmark_local.cu
+SRC_REMOTE := bench/benchmark_remote.cu
 
 OBJ_CPP := $(SRC_CPP:.cpp=.o)
 OBJ_CU := $(SRC_CU:.cu=.o)
