--- a/docker/Dockerfile.gh
+++ b/docker/Dockerfile.gh
@@ -1,4 +1,5 @@
 FROM nvidia/cuda:12.3.2-devel-ubuntu22.04
+ARG PY_VER=3.13
 
 # Non-interactive APT
 ENV DEBIAN_FRONTEND=noninteractive
@@ -15,28 +16,28 @@ RUN apt-get update && \
         libnuma-dev libdrm-dev libdrm-amdgpu1 \
         pkg-config libhiredis-dev zlib1g-dev curl && \
 \
-# ───── Add Python 3.13 PPA & install Python 3.13 + setuptools ─────
+# ───── Add Python ${PY_VER} PPA & install Python ${PY_VER} + setuptools ─────
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        python3.13 python3.13-dev python3.13-venv python3-setuptools && \
+        python${PY_VER} python${PY_VER}-dev python${PY_VER}-venv python3-setuptools && \
 \
-# ───── Bootstrap pip for Python 3.13 ─────
-    curl -sS https://bootstrap.pypa.io/get-pip.py | python3.13 && \
-    ln -sf /usr/bin/pip3.13 /usr/local/bin/pip && \
-    ln -sf /usr/bin/python3.13 /usr/local/bin/python3.13 && \
+# ───── Bootstrap pip for Python ${PY_VER} ─────
+    curl -sS https://bootstrap.pypa.io/get-pip.py | python${PY_VER} && \
+    ln -sf /usr/bin/pip${PY_VER} /usr/local/bin/pip && \
+    ln -sf /usr/bin/python${PY_VER} /usr/local/bin/python${PY_VER} && \
 \
 # ───── Clean up apt cache ─────
     rm -rf /var/lib/apt/lists/*
 
 # ─────────────────────────────────────────────────────────
-# Install Python build back-end (for Python 3.13)
+# Install Python build back-end (for Python ${PY_VER})
 # ─────────────────────────────────────────────────────────
-RUN python3.13 -m pip install --no-cache-dir build auditwheel pybind11
+RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
 
-# ───── Set Python 3.13 as default python3 and python3-config ─────
-RUN ln -sf /usr/bin/python3.13 /usr/local/bin/python3 && \
-    ln -sf /usr/bin/python3.13-config /usr/local/bin/python3-config
+# ───── Set Python ${PY_VER} as default python3 and python3-config ─────
+RUN ln -sf /usr/bin/python${PY_VER} /usr/local/bin/python3 && \
+    ln -sf /usr/bin/python${PY_VER}-config /usr/local/bin/python3-config
 
 # ─────────────────────────────────────────────────────────
 # Build and install redis-plus-plus
