adding dispatch functions

--- a/gpu_driven/Makefile
+++ b/gpu_driven/Makefile
@@ -18,10 +18,10 @@ CXXFLAGS  := -O3 -std=c++17 -Wall -pthread -fPIC -fvisibility=hidden
 LDFLAGS := -lpthread -lglog -libverbs -lnl-3 -lnl-route-3 -Xlinker -rpath -Xlinker $(CUDA_PATH)/lib64
 NVCCFLAGS := -O3 -std=c++17 -Xcompiler "-Wall -pthread -fPIC -fvisibility=hidden" -ccbin /usr/bin/g++
 
-INCLUDES := -Iinclude -I$(CUDA_PATH)/include -I/usr/include -I../include
+INCLUDES := -Iinclude -I$(CUDA_PATH)/include -I/usr/include -I../include -I../thirdparty/DeepEP/csrc
 
 SRC_CPP := src/proxy.cpp src/rdma.cpp src/common.cpp src/peer_copy_worker.cpp src/uccl_proxy.cpp src/uccl_bench.cpp src/peer_copy_manager.cpp
-SRC_CU  := src/gpu_kernel.cu src/peer_copy.cu src/py_cuda_shims.cu
+SRC_CU  := src/gpu_kernel.cu src/peer_copy.cu src/py_cuda_shims.cu 
 
 SRC_LOCAL  := bench/benchmark_local.cu
 SRC_REMOTE := bench/benchmark_remote.cu
@@ -37,22 +37,15 @@ OBJ_DUAL   := $(OBJ_CPP) $(OBJ_CU) $(SRC_DUAL:.cu=.o)
 
 PYBIND_OBJ := $(PYBIND_SRC:.cc=.o)
 
-UCCL_EP_SRC := src/uccl_ep.cc
-UCCL_EP_OBJ := $(UCCL_EP_SRC:.cc=.o)
-UCCL_EP_EXT := uccl_ep$(EXT_SUFFIX)
+UCCL_EP_OBJS := src/uccl_ep.o src/internode_ll.o
+UCCL_EP_EXT  := uccl_ep$(EXT_SUFFIX)
 
-$(UCCL_EP_OBJ): $(UCCL_EP_SRC)
-	$(CXX) $(CXXFLAGS) -D_GLIBCXX_USE_CXX11_ABI=$(TORCH_ABI) \
-	    -I$(TORCH_INCLUDE) -I$(TORCH_INCLUDE_API) \
-	    $(INCLUDES) $(PYBIND11_INCLUDES) -MMD -MP -c $< -o $@
-
-$(UCCL_EP_EXT): $(UCCL_EP_OBJ)
+$(UCCL_EP_EXT): $(UCCL_EP_OBJS)
 	$(CXX) $(CXXFLAGS) -shared -fPIC \
 	    -D_GLIBCXX_USE_CXX11_ABI=$(TORCH_ABI) \
 	    $(INCLUDES) $(PYBIND11_INCLUDES) $^ \
 	    -L$(TORCH_LIBDIR) -Wl,-rpath,$(TORCH_LIBDIR) \
-	    -ltorch_python \
-	    -ltorch -ltorch_cpu -ltorch_cuda -lc10 -lc10_cuda \
+	    -ltorch_python -ltorch -ltorch_cpu -ltorch_cuda -lc10 -lc10_cuda \
 	    -o $@
 
 TARGET_LOCAL  := benchmark_local
